--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- import font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet"> 
-
-
+    
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <!-- icon -->
     <link rel="icon" href="https://i.imgur.com/GXrheKp.jpg">
@@ -16,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Gendary! Might have your destiny to be here!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
